--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,3 +1,6 @@
 {
-	"coc.preferences.formatOnSaveFiletypes": ["*"]
+	"coc.preferences.formatOnSaveFiletypes": [
+		"*"
+	],
+	"rust-analyzer.procMacro.enable": true,
 }
