feat(tmux): add fzf window keybind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,6 +84,12 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key t choose-tree
 
+bind C-k display-popup -E "tmux list-windows -a -F '#{session_name}:#{window_index} - #{window_name}' \
+                          | grep -v \"^$(tmux display-message -p '#S')\$\" \
+                          | fzf --reverse \
+                          | sed -E 's/\s-.*$//' \
+                          | xargs -r tmux switch-client -t"
+
 # Copy mode keybinds
 unbind-key -T copy-mode-vi Space
 unbind-key -T copy-mode-vi Enter
