ref: base repo on contents of `.config` dir

--- a/git/config
+++ b/git/config
@@ -40,3 +40,7 @@
   wa = worktree add
   wl = worktree list
   wr = worktree remove
+
+[user]
+	email = christian.d@gardeniatech.com
+	name = Christian Dunn
