--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,10 +15,12 @@ bind-key -T copy-mode-vi "i" send-keys q
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'Nybkox/tmux-kanagawa'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
+set -g @kanagawa-ignore-window-colors true
 set -g @continuum-restore 'on'
 
 # MUST BE LAST LINE
