--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,27 +1,37 @@
-set-window-option -g mode-keys vi
-
-set-option -g renumber-windows on
-set-option -g status-position top
+set -g mode-keys vi
+set -g renumber-windows on
+set -g status-position top
+set -g status-justify centre
 
 # Copy mode keybinds
-unbind-key -T copy-mode-vi Space
-unbind-key -T copy-mode-vi Enter
 bind-key -T copy-mode-vi "v" send-keys -X begin-selection
+unbind-key -T copy-mode-vi Space
 bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" # Mac
-bind-key -T copy-mode-vi "Escape" send -X cancel
-bind-key -n C-x copy-mode
-bind-key -T copy-mode-vi "i" send-keys q
+unbind-key -T copy-mode-vi Enter
+
+bind -n C-h if-shell -F "#{@is_vim}" "send-keys C-h"  "select-pane -L"
+bind -n C-j if-shell -F "#{@is_vim}" "send-keys C-j"  "select-pane -D"
+bind -n C-k if-shell -F "#{@is_vim}" "send-keys C-k"  "select-pane -U"
+bind -n C-l if-shell -F "#{@is_vim}" "send-keys C-l"  "select-pane -R"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'Nybkox/tmux-kanagawa'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
-set -g @kanagawa-ignore-window-colors true
-set -g @continuum-restore 'on'
+set -g @kanagawa-theme dragon
+set -g @kanagawa-show-flags true
+set -g @kanagawa-show-powerline true
+set -g @kanagawa-show-left-sep "\ue0b4"
+set -g @kanagawa-show-right-sep "\ue0b6"
+
+set -g @kanagawa-plugins "weather cwd ram-usage cpu-usage"
+
+set -g @kanagawa-show-battery-status true
+set -g @kanagawa-cpu-usage-label ""
+set -g @kanagawa-ram-usage-label ""
 
 # MUST BE LAST LINE
 run '~/.tmux/plugins/tpm/tpm'
