Adopt `kanagawa`-based kitty, starship and tmux theming

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 set -g mode-keys vi
 set -g renumber-windows on
-set -g status-position top
+set -g status-position bottom
 set -g status-justify centre
 
 # Copy mode keybinds
@@ -27,7 +27,7 @@ set -g @kanagawa-show-powerline true
 set -g @kanagawa-show-left-sep "\ue0b4"
 set -g @kanagawa-show-right-sep "\ue0b6"
 
-set -g @kanagawa-plugins "weather cwd ram-usage cpu-usage"
+set -g @kanagawa-plugins "ram-usage cpu-usage"
 
 set -g @kanagawa-show-battery-status true
 set -g @kanagawa-cpu-usage-label ""
