--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,10 @@ bind-key -T copy-mode-vi "v" send-keys -X begin-selection
 unbind-key -T copy-mode-vi Space
 bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy" # Mac
 unbind-key -T copy-mode-vi Enter
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
 
 bind -n C-h if-shell -F "#{@is_vim}" "send-keys C-h"  "select-pane -L"
 bind -n C-j if-shell -F "#{@is_vim}" "send-keys C-j"  "select-pane -D"
