Add `jpr`/`jj pr` alias to format commits for a PR

--- a/jj/config.toml
+++ b/jj/config.toml
@@ -29,6 +29,7 @@ l = ["log"]
 pull = ["git", "fetch"]
 push = ["git", "push"]
 tug = ["bookmark", "move", "--from", "heads(::@- & bookmarks())", "--to", "@-"]
+pr = ["log", "--reversed", "--no-graph", "--template", "'- ' ++ self.description().first_line() ++ '\n'", "--revisions", "main..@ & ~description(exact:'')"]
 
 [merge-tools.diffe]
 program = "nvim"
